--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <h1>WYNIK <span class='player'></span>:<span class="ai"></span></h1>
     <canvas></canvas>
     <script src="js/app.js"></script>
 </body>
