pausing and replaying buttons added

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 <body>
     <h1>WYNIK <span class='player'></span>:<span class="ai"></span></h1>
     <canvas></canvas>
+    <button>Pause</button>
+    <button>Replay</button>
     <script src="js/app.js"></script>
 </body>
 
