container for buttons

--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
 <body>
     <h1>WYNIK <span class='player'></span>:<span class="ai"></span></h1>
     <canvas></canvas>
-    <button>Pause</button>
-    <button>Replay</button>
+    <div class="buttons">
+        <button>Pause</button>
+        <button>Replay</button>
+        <button>Reset</button>
+    </div>
     <script src="js/app.js"></script>
 </body>
 
