--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <h1>WYNIK <span class='player'></span>:<span class="ai"></span></h1>
     <canvas></canvas>
     <div class="buttons">
+        <button>Start</button>
         <button>Pause</button>
         <button>Replay</button>
         <button>Reset</button>
