--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <h1>WYNIK <span class='player'></span>:<span class="ai"></span></h1>
     <canvas></canvas>
     <div class="buttons">
-        <button>Start</button>
-        <button>Pause</button>
-        <button>Replay</button>
-        <button>Reset</button>
+        <button data-name="start">Start</button>
+        <button data-name="pause">Pause</button>
+        <button data-name="replay">Replay</button>
+        <button data-name="reset">Reset</button>
     </div>
     <script src="js/app.js"></script>
 </body>
