improved function buttons click

--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
     <canvas></canvas>
     <div class="buttons">
         <button data-name="start">Start</button>
-        <button data-name="replay">Replay</button>
-        <button data-name="reset">Reset</button>
+        <button data-name="replay">Reset</button>
     </div>
     <script src="js/app.js"></script>
 </body>
