--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <h1>WYNIK <span class='player'></span>:<span class="ai"></span></h1>
     <canvas></canvas>
     <div class="buttons">
-        <button data-name="start">Start</button>
-        <button data-name="replay">Reset</button>
+        <button>Start</button>
+        <button>Reset</button>
     </div>
     <script src="js/app.js"></script>
 </body>
