--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <button>Start</button>
         <button>Reset</button>
     </div>
-    <script src="js/app.js"></script>
+    <script src="js/app1.js"></script>
 </body>
 
 </html>
