--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 
 <body>
-    <h1>WYNIK <span class='player'></span>:<span class="ai"></span></h1>
+    <h1>PONG GAME</h1>
+    <h1 class="score">WYNIK <span class='player'></span>:<span class="ai"></span></h1>
     <canvas></canvas>
     <div class="buttons">
         <button>Start</button>
